--- a/.github/workflows/X86-config.yml
+++ b/.github/workflows/X86-config.yml
@@ -12,10 +12,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: x86/feeds.conf.default
-  CONFIG_FILE: x86/x86.config
-  DIY_P1_SH: x86/diy-part1.sh
-  DIY_P2_SH: x86/diy-part2.sh
+  FEEDS_CONF: configs/x86/feeds.conf.default
+  CONFIG_FILE: configs/x86/x86.config
+  DIY_P1_SH: configs/x86/diy-part1.sh
+  DIY_P2_SH: configs/x86/diy-part2.sh
   UPLOAD_FIRMWARE: true
   CONFIG: x86
   
