--- a/.github/workflows/Build_R2S.yml
+++ b/.github/workflows/Build_R2S.yml
@@ -9,10 +9,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: R2S/R2S.config
-  DIY_P1_SH: R2S/diy-part1.sh
-  DIY_P2_SH: R2S/diy-part2.sh
+  FEEDS_CONF: configs/R2S/feeds.conf.default
+  CONFIG_FILE: configs/R2S/R2S.config
+  DIY_P1_SH: configs/R2S/diy-part1.sh
+  DIY_P2_SH: configs/R2S/diy-part2.sh
   CLASH_KERNEL: arm64
   UPLOAD_RELEASE: true
   FILE_NAME: NanoPi-R2S
