--- a/.github/workflows/Build_R2S.yml
+++ b/.github/workflows/Build_R2S.yml
@@ -97,8 +97,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-        $GITHUB_WORKSPACE/diy/preset-clash-core.sh $CLASH_KERNEL
-        $GITHUB_WORKSPACE/diy/preset-terminal-tools.sh
 
     - name: 下载软件包
       id: package
@@ -129,7 +127,7 @@ jobs:
       run: |
         cd openwrt/bin/targets/*/*
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
-        rm -rf packages config.buildinfo feeds.buildinfo openwrt-rockchip-armv8-friendlyarm_nanopi-r2s.manifest profiles.json sha256sums version.buildinfo
+        rm -rf packages feeds.buildinfo openwrt-rockchip-armv8-friendlyarm_nanopi-r2s.manifest profiles.json sha256sums version.buildinfo
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
