--- a/.github/workflows/Build_Phicomm-N1.yml
+++ b/.github/workflows/Build_Phicomm-N1.yml
@@ -103,8 +103,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-        $GITHUB_WORKSPACE/diy/preset-clash-core.sh $CLASH_KERNEL
-        $GITHUB_WORKSPACE/diy/preset-terminal-tools.sh
 
     - name: 下载软件包
       id: package
@@ -137,7 +135,7 @@ jobs:
         tar -zcvf Packages.tar.gz ./*
         cp Packages.tar.gz $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
         cd $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
-        rm -rf Packages.tar.gz config.buildinfo feeds.buildinfo openwrt-armvirt-64-generic-kernel.bin openwrt-armvirt-64-generic.manifest sha256sums version.buildinfo
+        rm -rf Packages.tar.gz feeds.buildinfo openwrt-armvirt-64-generic-kernel.bin openwrt-armvirt-64-generic.manifest sha256sums version.buildinfo
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
